correcting alignement of language div

--- a/style/console.css
+++ b/style/console.css
@@ -28,7 +28,7 @@ body {
 
 #language a {
 	text-decoration: none;
-	margin: 0 0.3em 0 0.3em;
+	margin: 0;
 }
 
 #language img {
