--- a/style/deepblue.css
+++ b/style/deepblue.css
@@ -250,7 +250,7 @@ body {
 
 #language {
 	position: absolute;
-	right: 2em;
+	right: 1em;
 	top: 85px;
 	text-align: right;
 	color: white;
